--- a/pom.xml
+++ b/pom.xml
@@ -113,5 +113,10 @@
             <artifactId>lightapi-bukkit-common</artifactId>
             <version>5.3.0-Bukkit</version>
         </dependency>
+        <dependency>
+            <groupId>me.carleslc.Simple-YAML</groupId>
+            <artifactId>Simple-Yaml</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 </project>
